--- a/EvalBack/EvalBack.Context/EvalBack.Context.csproj
+++ b/EvalBack/EvalBack.Context/EvalBack.Context.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EvalBack.Entities\EvalBack.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
