--- a/EvalBack/EvalBack.Services.Contracts/EvalBack.Services.Contracts.csproj
+++ b/EvalBack/EvalBack.Services.Contracts/EvalBack.Services.Contracts.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EvalBack.Entities\EvalBack.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
